styles added on rest sections

--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
                 <p>No longer want to be Mail Mint friends?</p>
                 <p class="footer-links">
                     <a href="#">Email Preference</a>
+                    <span class="dot">.</span>
                     <a href="#">Unsubscribe</a>
                 </p>
             </section>
